Bug 374689 - desktop settings - wallpapers disappear
Summary: desktop settings - wallpapers disappear
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.8.5
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 375036 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-07 13:17 UTC by grouchomarx.fr
Modified: 2017-01-16 17:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.0
Sentry Crash Report:


Attachments
thumbnails disappear (49.95 KB, image/png)
2017-01-07 13:17 UTC, grouchomarx.fr
Details
thumbnails are shrunk (225.42 KB, image/png)
2017-01-07 13:19 UTC, grouchomarx.fr
Details
normal thumbnails (252.40 KB, image/png)
2017-01-07 13:20 UTC, grouchomarx.fr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grouchomarx.fr 2017-01-07 13:17:51 UTC
Created attachment 103256 [details]
thumbnails disappear

How to reproduce :
- configure desktop
- select plain color (or anything but image)
- apply
- select image as wallpaper type
- select a picture
- apply

Expected results :
- the thumbnails should be visible

Actual Results :
- the thumbnails are shrunk (attachment) and totally disappear when hitting apply (attachment)

Additional info : I am using an external monitor, but it was unplugged for the test. There was only one monitor in the display settings.
Comment 1 grouchomarx.fr 2017-01-07 13:19:35 UTC
Created attachment 103257 [details]
thumbnails are shrunk
Comment 2 grouchomarx.fr 2017-01-07 13:20:13 UTC
Created attachment 103258 [details]
normal thumbnails
Comment 3 Kai Uwe Broulik 2017-01-08 15:13:39 UTC
Git commit f6ce91499a16cd9e8fa4b56fdadf254e3ab79bd1 by Kai Uwe Broulik.
Committed on 08/01/2017 at 15:12.
Pushed by broulik into branch 'master'.

[Image Wallpaper] Simplify width/height management

Directly expose "targetSize" as property. The wallpaper is already initialized with
the correct size for some time now but the fact that we had two properties width and height
in there had it still do unneccessary work when it emitted "sizeChanged(2560, 0)" and
then the final "sizeChanged(2560, 1440)" afterwards.

Also, I didn't really see a point in storing the wallpaper size in its config,
it's overwritten by the wallpaper anyway and only used in the wallpaper config dialog
for the aspect ratio. We can just ask the view directly then.
FIXED-IN: 5.9.0

Differential Revision: https://phabricator.kde.org/D4001

M  +3    -29   wallpapers/image/image.cpp
M  +2    -11   wallpapers/image/image.h
M  +0    -8    wallpapers/image/imagepackage/contents/config/main.xml
M  +2    -3    wallpapers/image/imagepackage/contents/ui/config.qml
M  +1    -14   wallpapers/image/imagepackage/contents/ui/main.qml
M  +0    -8    wallpapers/image/slideshowpackage/contents/config/main.xml

https://commits.kde.org/plasma-workspace/f6ce91499a16cd9e8fa4b56fdadf254e3ab79bd1
Comment 4 Kai Uwe Broulik 2017-01-16 17:23:26 UTC
*** Bug 375036 has been marked as a duplicate of this bug. ***